--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,28 @@
             <version>1.2</version>
         </dependency>
 
+        <!-- db start -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+        </dependency>
+
+        <!-- 连接池 begin -->
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-pool</groupId>
+            <artifactId>commons-pool</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <!-- 连接池 end -->
+
+        <!-- db end -->
+
         <!-- jedis -->
         <dependency>
             <groupId>redis.clients</groupId>
@@ -182,13 +204,31 @@
 
 
     <build>
-        <sourceDirectory>src</sourceDirectory>
+        <!--<sourceDirectory>src</sourceDirectory>
         <resources>
             <resource>
                 <directory>src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
+            </resource>
+        </resources>-->
+        <outputDirectory>src/main/webapp/WEB-INF/classes</outputDirectory>
+        <!-- 决定了资源的相对路径 -->
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <testSourceDirectory>src/test/java</testSourceDirectory>
+        <resources>
+            <resource>
+                <directory>src/main/resources/config/${profiles.active}</directory>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/java</directory>
+                <filtering>false</filtering>
             </resource>
         </resources>
         <plugins>
@@ -199,7 +239,7 @@
                     <finalName>PerfMonAgent</finalName>
                     <archive>
                         <manifestEntries>
-                            <Premain-class>main.java.com.wenniuwuren.spring.aop.time.consume.PerfMonAgent</Premain-class>
+                            <Premain-class>com.wenniuwuren.spring.aop.time.consume.PerfMonAgent</Premain-class>
                             <Boot-Class-Path>D:\MavenRepository\org\javassist\javassist\3.20.0-GA\javassist-3.20.0-GA.jar</Boot-Class-Path>
                             <Can-Redefine-Classes>false</Can-Redefine-Classes>
                         </manifestEntries>
@@ -219,4 +259,35 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <profiles.active>dev</profiles.active>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <profiles.active>test</profiles.active>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+        <!-- 发布打包 mvn clean -Ponline package -->
+        <profile>
+            <id>online</id>
+            <properties>
+                <profiles.active>online</profiles.active>
+            </properties>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
 </project>
