--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <mongo-driver.version>3.2.0</mongo-driver.version>
+        <fastjson.version>1.2.4</fastjson.version>
         <spring.version>4.2.1.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hbase-client.version>0.98.6-hadoop1</hbase-client.version>
@@ -27,6 +29,21 @@
             <artifactId>hbase-client</artifactId>
             <version>${hbase-client.version}</version>
         </dependency>
+
+        <!-- -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <!-- mongodb start -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>${mongo-driver.version}</version>
+        </dependency>
+        <!-- mongodb end -->
 
         <!-- db start -->
         <dependency>
