--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <version>${hbase-client.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
         <!-- -->
         <dependency>
             <groupId>com.alibaba</groupId>
