--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <spring.version>4.2.1.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hbase-client.version>0.98.6-hadoop1</hbase-client.version>
+        <commons-lang.version>2.4</commons-lang.version>
     </properties>
 
     <dependencies>
@@ -23,7 +24,6 @@
             <artifactId>zookeeper</artifactId>
             <version>3.4.9</version>
         </dependency>
-
 
         <dependency>
             <groupId>commons-logging</groupId>
@@ -89,6 +89,12 @@
             <version>2.9.0</version>
             <type>jar</type>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>${commons-lang.version}</version>
         </dependency>
 
         <dependency>
