--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <fastjson.version>1.2.4</fastjson.version>
         <spring.version>4.2.1.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <hbase-client.version>0.98.6-hadoop1</hbase-client.version>
+        <hbase-client.version>1.2.6</hbase-client.version>
         <commons-lang.version>2.4</commons-lang.version>
     </properties>
 
