change：Guava 限流测试用例

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+
         <!-- kafka client -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
