change: RocketMQ test case

--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- RocketMQ -->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+
         <!-- SPRING begin -->
         <dependency>
             <groupId>org.springframework</groupId>
